:bug: Fix week content overflow-x allowed

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -34,7 +34,7 @@
 
 .calendar--week-content {
   display: flex;
-  overflow: auto;
+  overflow-x: hidden;
   flex: 1;
 }
 
